Add dynamically the work section

--- a/index.html
+++ b/index.html
@@ -89,120 +89,14 @@
           </ul>
         </div>
       </section>
+
+
       <section id="work-section">
-        <div class="work-section-heading">
-          <h2 class="work-section-title">My Recent Works</h2>
-          <hr class="divider">
-        </div>
-        <article class="projects">
-          <section class="stories-item">
-            <img class="img-placeholder" src="default/PNG/img-placeholder.png" alt="main-card">
-            <div class="right-block1">
-              <h3 class="right-block1-heading">Multi-Post Stories</h3>
-              <p class="right-block1-description">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-              <ul class="lang1">
-                <li class="lang-list1">CSS</li>
-                <li class="lang-list1">HTML</li>
-                <li class="lang-list1">Bootstrap</li>
-                <li class="lang-list1">Ruby</li>
-              </ul>
-              <button type="button">See project</button>
-            </div>
-          </section>
-          <section class="cards-grid">
-            <aside class="card">
-              <div class="card-img">
-                <img src="default/PNG/img-placeholder1.png" alt="placeholder">
-              </div>
-              <div class="right-block2">
-                <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
-                <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                <ul class="lang2">
-                  <li class="lang-list2">HTML</li>
-                  <li class="lang-list2">Bootstrap</li>
-                  <li class="lang-list2">Ruby</li>
-                </ul>
-              </div>
-              <button class="large-button" type="button">See project</button>
-            </aside>
-            <aside class="card">
-              <div class="card-img">
-                <img src="default/PNG/img-placeholder1.png" alt="placeholder">
-              </div>
-              <div class="right-block2">
-                <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
-                <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                <ul class="lang2">
-                  <li class="lang-list2">HTML</li>
-                  <li class="lang-list2">Bootstrap</li>
-                  <li class="lang-list2">Ruby</li>
-                </ul>
-              </div>
-              <button class="large-button" type="button">See project</button>
-            </aside>
-            <aside class="card">
-              <div class="card-img">
-                <img src="default/PNG/img-placeholder1.png" alt="placeholder">
-              </div>
-              <div class="right-block2">
-                <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
-                <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                <ul class="lang2">
-                  <li class="lang-list2">HTML</li>
-                  <li class="lang-list2">Bootstrap</li>
-                  <li class="lang-list2">Ruby</li>
-                </ul>
-              </div>
-              <button class="large-button" type="button">See project</button>
-            </aside>
-            <aside class="card">
-              <div class="card-img">
-                <img src="default/PNG/img-placeholder1.png" alt="placeholder">
-              </div>
-              <div class="right-block2">
-                <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
-                <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                <ul class="lang2">
-                  <li class="lang-list2">HTML</li>
-                  <li class="lang-list2">Bootstrap</li>
-                  <li class="lang-list2">Ruby</li>
-                </ul>
-              </div>
-              <button class="large-button" type="button">See project</button>
-            </aside>
-            <aside class="card">
-              <div class="card-img">
-                <img src="default/PNG/img-placeholder1.png" alt="placeholder">
-              </div>
-              <div class="right-block2">
-                <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
-                <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                <ul class="lang2">
-                  <li class="lang-list2">HTML</li>
-                  <li class="lang-list2">Bootstrap</li>
-                  <li class="lang-list2">Ruby</li>
-                </ul>
-              </div>
-              <button class="large-button" type="button">See project</button>
-            </aside>
-            <aside class="card">
-              <div class="card-img">
-                <img src="default/PNG/img-placeholder1.png" alt="placeholder">
-              </div>
-              <div class="right-block2">
-                <h3 class="right-block2-heading">Profesional Art Printing Data</h3>
-                <p class="right-block2-description">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                <ul class="lang2">
-                  <li class="lang-list2">HTML</li>
-                  <li class="lang-list2">Bootstrap</li>
-                  <li class="lang-list2">Ruby</li>
-                </ul>
-              </div>
-              <button class="large-button" type="button">See project</button>
-            </aside>
-          </section>
-        </article>
+        <section id="cards-grid">
+        </section>
       </section>
+
+
       <section id="about-me-section">
         <h2 class="about-me-heading">About me</h2>
         <p class="about-me-description">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
@@ -248,6 +142,8 @@
           </div>
         </section>
       </section>
+
+
       <section id="form-section">
         <h2 class="form-heading">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
         <form action="https://formspree.io/f/mdovqere" method="post">
