Add modals to the page

--- a/index.html
+++ b/index.html
@@ -89,14 +89,10 @@
           </ul>
         </div>
       </section>
-
-
       <section id="work-section">
-        <section id="cards-grid">
-        </section>
+        <div id="cards-grid">
+        </div>
       </section>
-
-
       <section id="about-me-section">
         <h2 class="about-me-heading">About me</h2>
         <p class="about-me-description">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
@@ -142,8 +138,6 @@
           </div>
         </section>
       </section>
-
-
       <section id="form-section">
         <h2 class="form-heading">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
         <form action="https://formspree.io/f/mdovqere" method="post">
@@ -190,6 +184,8 @@
       </ul>
       <div id="bottom-line"></div>
     </footer>
+    <div class="modal" id="modal"></div>
+    <div id="overlay"></div>
     <script src="script.js"></script>
   </body>
 </html>
