Make the requested changes

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </ul>
       <div id="bottom-line"></div>
     </footer>
-    <div class="modal" id="modal"></div>
+    <div id="modals-container"></div>
     <div id="overlay"></div>
     <script src="script.js"></script>
   </body>
