Add attribute id to input message

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </li>
             <hr class="menu-divider">
           </ul>
-          <div class="menu-footer"><div id="bottom-line"></div></div>
+          <div class="menu-footer"><div class="bottom-line"></div></div>
         </div>
       </div>
       <div id="tool-bar">
@@ -142,13 +142,13 @@
         <h2 class="form-heading">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
         <form id="form" action="https://formspree.io/f/mdovqere" method="post">
           <label for="name">
-            <input id="name" name="name" type="text" maxlength="30" placeholder="Full name"required>
+            <input id="name" name="name" type="text" maxlength="30" placeholder="Full name" required>
           </label>
           <label for="email">
             <input id="email" name="email" type="email" placeholder="Email address" required>
           </label>
           <label for="message">
-            <textarea name="message" maxlength="500" placeholder="Write me something..." required></textarea>
+            <textarea id="message" name="message" maxlength="500" placeholder="Write me something..." required></textarea>
           </label>
           <button class="btn" type="submit">Get in touch</button>
           <p class="errText"></p>
@@ -183,7 +183,7 @@
           </a>
         </li>
       </ul>
-      <div id="bottom-line"></div>
+      <div class="bottom-line"></div>
     </footer>
     <div id="modals-container"></div>
     <div id="overlay"></div>
